project/app/manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-application
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-application
  template:
    metadata:
      labels:
        app: todo-application
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: todo-application
          image: arskale/todo-application:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: storage-vol
              mountPath: /app/storage
      volumes:
        - name: storage-vol
          persistentVolumeClaim:
            claimName: todo-pv-claim
