project/app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-application-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-application
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
